test/unstable/binaryFormat.good
binaryFormat.chpl:4: warning: The ObjectSerialization module is unstable. The module's name, its types, and serialization format are subject to change.
$CHPL_HOME/modules/standard/IO.chpl:nnnn: In method 'write':
$CHPL_HOME/modules/standard/IO.chpl:nnnn: warning: binary(De)Serializer's format for strings, bytes, and classes no longer includes length-bytes or nilability-bytes. Recompile with ``-swarnBinaryStructured=false`` to disable this warning. To utilize the old format, please use the unstable 'ObjectSerialization' package module.
  binaryFormat.chpl:16: called as (fileWriter(false,binarySerializer)).write(args(0): owned C)
$CHPL_HOME/modules/standard/IO.chpl:nnnn: In method 'writeHelper':
$CHPL_HOME/modules/standard/IO.chpl:nnnn: warning: binary(De)Serializer's format for strings, bytes, and classes no longer includes length-bytes or nilability-bytes. Recompile with ``-swarnBinaryStructured=false`` to disable this warning. To utilize the old format, please use the unstable 'ObjectSerialization' package module.
  $CHPL_HOME/modules/standard/IO.chpl:nnnn: called as (fileWriter(false,binarySerializer)).writeHelper(args: 1*string, endl: nothing, sep: nothing) from method 'write'
  binaryFormat.chpl:17: called as (fileWriter(false,binarySerializer)).write(args(0): string)
binaryFormat.chpl:10: In function 'main':
binaryFormat.chpl:23: warning: binary(De)Serializer's format for classes no longer includes nilability-bytes. Recompile with ``-swarnBinaryStructured=false`` to disable this warning. To utilize the old format, please use the unstable 'ObjectSerialization' package module.
$CHPL_HOME/modules/standard/IO.chpl:nnnn: In method '_readInner':
$CHPL_HOME/modules/standard/IO.chpl:nnnn: warning: binary(De)Serializer's format for classes no longer includes nilability-bytes. Recompile with ``-swarnBinaryStructured=false`` to disable this warning. To utilize the old format, please use the unstable 'ObjectSerialization' package module.
  $CHPL_HOME/modules/standard/IO.chpl:nnnn: called as (fileReader(false,binaryDeserializer))._readInner(args(0): borrowed C) from method 'read'
  $CHPL_HOME/modules/internal/OwnedObject.chpl:nnnn: called as (fileReader(false,binaryDeserializer)).read(args(0): borrowed C)
  within internal functions (use --print-callstack-on-error to see)
  $CHPL_HOME/modules/standard/IO.chpl:nnnn: called as canResolveMethod(obj: owned C, param fname = "deserialize", args(0): fileReader(false,binaryDeserializer), args(1): binaryDeserializer) from method 'deserializeValue'
  $CHPL_HOME/modules/standard/IO.chpl:nnnn: called as binaryDeserializer.deserializeValue(reader: fileReader(false,binaryDeserializer), val: owned C) from method '_deserializeOne'
  $CHPL_HOME/modules/standard/IO.chpl:nnnn: called as (fileReader(false,binaryDeserializer))._deserializeOne(x: owned C, loc: locale) from method '_readInner'
  $CHPL_HOME/modules/standard/IO.chpl:nnnn: called as (fileReader(false,binaryDeserializer))._readInner(args(0): owned C) from method 'read'
  binaryFormat.chpl:23: called as (fileReader(false,binaryDeserializer)).read(args(0): owned C)
binaryFormat.chpl:10: In function 'main':
binaryFormat.chpl:38: warning: binary(De)Serializer's format for classes no longer includes nilability-bytes. Recompile with ``-swarnBinaryStructured=false`` to disable this warning. To utilize the old format, please use the unstable 'ObjectSerialization' package module.
----- WRITING -----
----- READ BY VALUE -----
string error: binaryDeserializer does not support reading 'string' or 'bytes'. Please use a method like 'fileReader.readBinary' instead.
{x = 5}

----- READ TYPE -----
{x = 5}
string error: binaryDeserializer does not support reading 'string' or 'bytes'. Please use a method like 'fileReader.readBinary' instead.
